# AwangKeyboard

./: .gitignore  README.md  index.html
1-Hardware/: 立创工程地址.txt
2-Firmware/Awang-Keyboard-fw/: .gitignore  CMakeLists.txt  Kconfig  app.overlay  prj.conf  prj_release.conf
2-Firmware/Awang-Keyboard-fw/configuration/: config.h  hid_def.h  led_def.h  matrix_def.h
2-Firmware/Awang-Keyboard-fw/src/: Config.h  main.c  main.cpp
2-Firmware/Awang-Keyboard-fw/src/Drivers/: Gpio.cpp  Gpio.hpp  Nvs.cpp  Nvs.hpp  Timer.cpp  Timer.hpp  Usb.cpp  Usb.hpp
2-Firmware/Awang-Keyboard-fw/src/Keyboard/: Keycode.h  Led.cpp  Led.hpp  Matrix.cpp  Matrix.hpp  Power.cpp  Power.hpp
2-Firmware/Awang-Keyboard-fw/src/events/: CMakeLists.txt  Kconfig  hid_event.c  hid_event.h  keyboard_event.c  keyboard_event.h  matrix_event.c  matrix_event.h
2-Firmware/Awang-Keyboard-fw/src/modules/: CMakeLists.txt  Kconfig  Kconfig.clock  Kconfig.led  Kconfig.matrix  Kconfig.usb  clock.c  led.c  matrix.c  usb.c
2-Firmware/Awang-Keyboard-fw/src/utils/: CMakeLists.txt  flash_storage.c  flash_storage.h
3-Layout/: kle-rawdata-empty.txt  kle-rawdata-key-id.txt  kle-rawdata-label.txt  kle-rawdata-led-id.txt  kle-rawdata-switch-id.txt
assets/: home-038eb571.css  home-47397121.css  home-9bda6095.css  home-b1e91db4.js  home-c74de54a.js  index-3d2df14c.js  index-5a911717.js  index-5c6d5a98.css  index-904dce39.css  index-98167738.css  index-988d65cd.css  index-f3c245f7.js  keymap-0dc1303a.js  light-48bf2882.js  macro-8fb91153.js  macro-bbb8ad9c.js  macro-f94799c9.js  setting-9692c60a.js  setting-e203bfdd.js  (+2 more)
(+111 files in other folders)
